allow chain_num=-1 for all chains; ranges for chi2 params

--- a/readme.html
+++ b/readme.html
@@ -8,7 +8,7 @@
 <center>
 <h2>CosmoMC Readme </h2></center>
 
-<center><b>March 2014</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
+<center><b>April 2014</b>. Check the <a href="http://cosmologist.info/cosmomc/">web
 page</a> for the latest version.<BR>
 </center>
 <P>
@@ -517,6 +517,7 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <LI>Output derived parameter H(z) in now in standard km/s/Mpc units
 <LI>action=4 now outputs timings for each likelihood (only for first time run, so does not account for any caching); new <b>test_output_root</b> puts out the theory CL (+ any derived likelihood data) at the test point
 <LI>GetDist has new optional second parameter to specify file_root, e,g <I>getdist distparams.ini chains/test</i>
+<LI>GetDist <b>chain_num</b> can now either be unspecified or -1 in order to read as many chains as exist
 </UL>
 
 <LI><B>March 2014</B><BR>
