--- a/readme.html
+++ b/readme.html
@@ -518,6 +518,8 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <LI>action=4 now outputs timings for each likelihood (only for first time run, so does not account for any caching); new <b>test_output_root</b> puts out the theory CL (+ any derived likelihood data) at the test point
 <LI>GetDist has new optional second parameter to specify file_root, e,g <I>getdist distparams.ini chains/test</i>
 <LI>GetDist <b>chain_num</b> can now either be unspecified or -1 in order to read as many chains as exist
+<LI>python/makeTables.py has new options <b>delta_chisq_paramtag</b> to specify reference parameter model for quoting &Delta;&chi;<sup>2</sup> to (default is baseline mode), and <b>changes_from_datatag</b> to give shifts in parameters (in sigma) relative to the specified data combination tag at the same parameter combination
+<LI>python/batchJob.py has new convenience jobGroup class for optional use in grid setting files; dataSet class has <b>add</b> method to modifying existing content
 </UL>
 
 <LI><B>March 2014</B><BR>
