auto-limits for 3d plots with bounds, test_used_params optional input for action_tests

--- a/readme.html
+++ b/readme.html
@@ -520,6 +520,7 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <LI>GetDist <b>chain_num</b> can now either be unspecified or -1 in order to read as many chains as exist
 <LI>python/makeTables.py has new options <b>delta_chisq_paramtag</b> to specify reference parameter model for quoting &Delta;&chi;<sup>2</sup> to (default is baseline mode), and <b>changes_from_datatag</b> to give shifts in parameters (in sigma) relative to the specified data combination tag at the same parameter combination
 <LI>python/batchJob.py has new convenience jobGroup class for optional use in grid setting files; dataSet class has <b>add</b> method to modifying existing content
+<LI>Python 3d plots now set hard bounds automatically (as 2d)
 </UL>
 
 <LI><B>March 2014</B><BR>
