fix total likelihood in chains output from importance sampling

--- a/readme.html
+++ b/readme.html
@@ -507,6 +507,14 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
+
+<LI><B>xx 2014</B><BR>
+<UL>
+<LI>Fixed bugs in writing out likelihoods for importance sampled chains and setting grid run getdist output directories
+<LI>python/makeTables.py has new option <b>changes_adding_data</b> to give shifts in parameter means (in sigma) between runs with and without given data
+</UL>
+
+
 <LI><B>April 2014</B><BR>
 <UL>
 <LI>CAMB update to April 2014 version; cosmomc support added for running of running (<b>nrunrun</b>) and running tensor tilt (<b>ntrun</b>). Using <b>inflation_consistency</b> now uses second order consistency relations for nt and ntrun.
