--- a/readme.html
+++ b/readme.html
@@ -510,8 +510,9 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 
 <LI><B>xx 2014</B><BR>
 <UL>
-<LI>Fixed bugs in writing out likelihoods for importance sampled chains and setting grid run getdist output directories
+<LI>Fixed bugs in writing out likelihoods for importance sampled chains and setting grid run importance sampling output directories
 <LI>python/makeTables.py has new option <b>changes_adding_data</b> to give shifts in parameter means (in sigma) between runs with and without given data
+<LI>python/makePlots.py has new option <b>compare_alldata</b> to make plots comparing all data combinations for each parameter combination
 </UL>
 
 
