updated HST module to read central value and error from .inif ile; makefile debug flags remove -fpe0 for clik compatibility

--- a/readme.html
+++ b/readme.html
@@ -508,9 +508,10 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 
 <UL>
 
-<LI><B>xx 2014</B><BR>
+<LI><B>May 2014</B><BR>
 <UL>
-<LI>Fixed bugs in writing out likelihoods for importance sampled chains and setting grid run importance sampling output directories
+<LI>HST module updated to read H0 value and error from .ini file (allowing easier modification/variation testing)
+<LI>Fixed bugs in writing out likelihoods for importance sampled chains, setting grid run importance sampling output directories, other minor fixes
 <LI>python/makeTables.py has new option <b>changes_adding_data</b> to give shifts in parameter means (in sigma) between runs with and without given data
 <LI>python/makePlots.py has new option <b>compare_alldata</b> to make plots comparing all data combinations for each parameter combination
 </UL>
