update Planck readme

--- a/readme_planck_internal.html
+++ b/readme_planck_internal.html
@@ -32,7 +32,8 @@ A set of .ini files are supplied in ./batch2 which set up standard for Planck fu
 <LI>CamSpec derived parameters (total foreground amplitudes at L=2000)
 <LI>added camspec_make.ini for making beam-marged; use of .bestfit_cl and .camspec_foreground for fiducial model
 <LI>removed _marge_mode marged like file (can easily be calculated on the fly)
-<LI>Click 8.8 has new highL file actspt_2013_11.clik 
+<LI>Click 8.8 has new highL file actspt_2013_11.clik
+<LI>widened values cosmology parameter priors; Added batch2/HST* files for different Hubble contraints
 </UL>
 
 </body></center> 
