add general linear correction to CMBlikes.f90

--- a/readme_planck.html
+++ b/readme_planck.html
@@ -51,6 +51,7 @@ to see if things are being loaded and start running OK.
 <P>
 Note that the "highL" (ACT/SPT) likelihood file is not included in the first PLC download; hopefully it will be added soon. Meanwhile you can follow the instructions on the Planck likelihood download page for how to make it from the <A HREF="http://lambda.gsfc.nasa.gov/product/act/act_fulllikelihood_get.cfm">ACT/SPT</A> download.
 <P>
+<A NAME="PlanckChains"></A>
 <H3>Using Planck Chains</H3>
 Planck provide a set of parameter chains produced by CosmoMC, available <A HREF="http://www.sciops.esa.int/wikiSI/planckpla/index.php?title=Cosmological_Parameters&instance=Planck_Public_PLA">here</a>. The full grid (2.8GB) download is also available from this <A HREF="http://irsa.ipac.caltech.edu/data/Planck/release_1/ancillary-data/COM_CosmoParams_FullGrid_R1.10.tar.gz">US link</A>.
 You can use CosmoMC's python scripts and getdist to analyse and make plots from them. First download and extract all the chain data. Make a symbolic link from ./cosmomc/PLA to the location of the chains, e.g.
@@ -133,4 +134,4 @@ Outputs of the two versions should look like this:<BR>
 <IMG SRC="http://cosmologist.info/cosmomc/pics/planck/mnu_nnu.png">
 <IMG SRC="http://cosmologist.info/cosmomc/pics/planck/mnu_nnu2.png">
 
-</body>
+</body> 
