--- a/readme.html
+++ b/readme.html
@@ -507,6 +507,12 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
+<LI><B>xx 2014</B><BR>
+<UL>
+<LI>Fixed bug in underlying bicubic interpolation (Interpolation.f90); caused crashes with simple mpk runs and possibly more general issues
+<LI>Fixed bug in production of .data files by importance sampling
+</UL>
+
 
 <LI><B>May 2014</B><BR>
 <UL>
