added Alensf for scaling fixed fiducial spectrum; output of rms deflection derived parameter

--- a/readme_planck_internal.html
+++ b/readme_planck_internal.html
@@ -33,7 +33,9 @@ A set of .ini files are supplied in ./batch2 which set up standard for Planck fu
 <LI>added camspec_make.ini for making beam-marged; use of .bestfit_cl and .camspec_foreground for fiducial model
 <LI>removed _marge_mode marged like file (can easily be calculated on the fly)
 <LI>Click 8.8 has new highL file actspt_2013_11.clik
-<LI>widened values cosmology parameter priors; Added batch2/HST* files for different Hubble contraints
+<LI>widened values cosmology parameter priors; Added batch2/HST* files for different Hubble constraints
+<LI>Added Alensf parameter for lensing smoothing from power scaled from fiducial
+<LI>Added rmsdeflect output derived parameter (of physical lensing power)
 </UL>
 
 </body></center> 
