add DR8 BAO dataset (from Hee-Jong Seo)

--- a/readme.html
+++ b/readme.html
@@ -510,6 +510,7 @@ Many old add-ons are unlikely to work with this version of CosmoMC. I will add o
 <LI><B>xx 2014</B><BR>
 <UL>
 <LI>Fixed default ranges for JLA alpha parameter. Updated JLA likelihood to allow <b>JLA_marginalize=T</b> for importance sampling with internal grid integration (as SNLS, but now non-square grid).
+<LI>Added DR8 BAO likelihood for completeness (thanks Hee-Jong Seo)    
 <LI>Fixed bug in underlying bicubic interpolation (Interpolation.f90); caused crashes with simple mpk runs and possibly more general issues
 <LI>Fixed bug in production of .data files by importance sampling
 <LI>Added more helpful "-h" help info for some python scripts; more plotTables.py options
