--- a/readme.html
+++ b/readme.html
@@ -512,7 +512,7 @@ installed manually or obtained from the cosmomc git repository (access available
 <UL>
 <LI><B>July 2014</B><BR>
 <UL>
-<LI>Python job queue scripts generalized for better portability and speed; can use environment variables and job script tokens to specify job submission defaults (job templates for specific machines may need to be updated; new sample template provided for MOAB scheduler)
+<LI>Python job submission and queue scripts generalized for better portability and speed; can use environment variables and job script tokens to specify job submission defaults (job templates for specific machines may need to be updated; new sample template provided for MOAB scheduler)
 <LI>plotTables.py: new options including showing parameter shifts to a reference in sigma units
 <LI>makePlots.py: several new options for different cross-grid data comparisons and triangle plots 
 <LI>makeGrid.py: various small new options and functions (make need to re-run makeGrid on existing grids to update)
