--- a/readme.html
+++ b/readme.html
@@ -513,8 +513,8 @@ installed manually or obtained from the cosmomc git repository (access available
 <LI><B>July 2014</B><BR>
 <UL>
 <LI>Python job submission and queue scripts generalized for better portability and speed; can use environment variables and job script tokens to specify job submission defaults (job templates for specific machines may need to be updated; new sample template provided for MOAB scheduler)
-<LI>plotTables.py: new options including showing parameter shifts to a reference in sigma units
-<LI>makePlots.py: several new options for different cross-grid data comparisons and triangle plots 
+<LI>makeTables.py: new options including showing parameter shifts to a reference in sigma units
+<LI>makePlots.py: several new options for different cross-grid data comparisons and triangle plots
 <LI>makeGrid.py: various small new options and functions (make need to re-run makeGrid on existing grids to update)
 <LI>runbatch.py: option for combining several runs into one job (--runsPerJob)
 <LI>copyGridFiles.py: new script to easily copy chains or getdist results from part of a grid (copy to directory or directly into zip file)
