--- a/readme.html
+++ b/readme.html
@@ -510,6 +510,13 @@ installed manually or obtained from the cosmomc git repository (access available
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
+<LI><B>xxx 2014</B><BR>
+<UL>
+<LI>Added deleteJobs.py and corresponding functions in jobQueue.py
+<LI>batchJob functions to resolve actual chain name given param and data tags (in any order)
+<LI>Fixed emptying of .data files re-starting from checkpoint
+</UL>
+
 <LI><B>July 2014</B><BR>
 <UL>
 <LI>Python job submission and queue scripts generalized for better portability and speed; can use environment variables and job script tokens to specify job submission defaults (job templates for specific machines may need to be updated; new sample template provided for MOAB scheduler)
