--- a/readme.html
+++ b/readme.html
@@ -514,7 +514,7 @@ installed manually or obtained from the cosmomc git repository (access available
 <UL>
 <LI>Added deleteJobs.py and corresponding functions in jobQueue.py
 <LI>batchJob functions to resolve actual chain name given param and data tags (in any order)
-<LI>Fixed emptying of .data files re-starting from checkpoint
+<LI>Fixed emptying of .data files when -starting from checkpoint
 </UL>
 
 <LI><B>July 2014</B><BR>
