--- a/camb/readme.html
+++ b/camb/readme.html
@@ -143,13 +143,13 @@ Some details about what different source code files do are given <A HREF="#FILES
 <P>
 <A NAME="version">
 <H3>Version history</H3>
-<B>December 2014</B><BR>
+<B>January 2015</B><BR>
 <UL>
 <LI>Transfer function output now includes more variables, including different total densities and velocities (see <A HREF="#transfer">list</A>)
 <LI>Generalized matter power and sigma8 functions; output of "growth" (from CDM velocity correlation sigma8_vd^2/sigma8)
 <LI>Output of additional derived parameters (k<sub>eq</sub>, D<sub>A</sub>, &theta;<sub>s,eq</sub> - the angular scale of the sound horizon at matter-radiation equality)
 <LI>Add <b>halofit_version</b> (=1,2,3,4) to set halofit version (see params.ini)
-<LI>Halofit tweak to prevent negative values in neutrino models for high &Omega;<sub>m</sub>
+<LI>Halofit tweak to prevent negative values in neutrino models for high &Omega;<sub>m</sub> (thanks Simeon Bird)
 <LI>Add tensors when calculating bispectrum Fisher values
 <LI>Add AngularDiameterDistance2 utility function
 <LI>Added internal ALens_Fiducial as alternative to Alens
