--- a/readme.html
+++ b/readme.html
@@ -510,7 +510,7 @@ installed manually or obtained from the cosmomc git repository (access available
 <A NAME="Version"><h2>Version History</h2></A>
 
 <UL>
-<LI><B>xxx 2014</B><BR>
+<LI><B>January 2015</B><BR>
 <UL>
 <LI>New GetDist python version, updated plotted and graphical user interface:
 <UL>
@@ -524,7 +524,7 @@ installed manually or obtained from the cosmomc git repository (access available
 <LI>Data Updates:
 <UL>
 <LI>New weak lensing module, using Weyl spectrum from CAMB, with various data cuts of the <A HREF="http://arxiv.org/abs/1303.1808">CFHTlenS data</A> (thanks Adam Moss)
-<LI>BAO module restructured, and supports a number of points with any of fsigma8, DA, H, Dv/rs, rs/DV and with a correlation matrix
+<LI>BAO module restructured, and supports a number of points with any of fsigma8, DA, H, Dv/rs, rs/DV, rs H, and with a correlation matrix
 <LI>Added RSD/BAO measurements from <A HREF="http://arxiv.org/abs/1312.4899">Samushia et al.</A> and <A HREF="http://arxiv.org/abs/1204.4725">Beutler et al.</A> (thanks Adam Moss)
 <LI>Added BAO from DR7 MGS (<A HREF="http://arxiv.org/abs/1409.3242">arXiv:1409.3242</A>, thanks Lado Samushia), and 6DF updated to use rs/Dv.
 <LI>New Abundances module for Yp and D/H abundance measurement likelihoods
