change to make BKP-only runs faster (transfer functions not recomputed)

--- a/readme.html
+++ b/readme.html
@@ -513,7 +513,7 @@ installed manually or obtained from the cosmomc git repository (access available
 <UL>
 <LI><B>January 2015</B><BR>
 <UL>
-<LI>Added BICEP-Keck-Planck likelihood (e.g. include batch2/BKPlank.ini)
+<LI>Added <A HREF="http://bicepkeck.org/">BICEP-Keck-Planck</A> likelihood (e.g. include batch2/BKPlanck.ini)
 <LI>New GetDist python version, updated plotted and graphical user interface:
 <UL>
 <LI>Run python/getdust/gui.py (required PySide python module to be installed): make 1D, 2D, 3D plots, select parameters and chains, export PDF or script
